--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -1,43 +1,41 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      {% block title %}Пайтон Блог{% endblock %} {% comment %} Вариант 2 -
-      сделать дефолтное значение через фильтры + переменная {% endcomment %} {%
-      comment %} {{ page_title | default('Пайтон Блог') }} {% endcomment %} {%
-      block head %}{% endblock %}
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>
+    {% block title %}Пайтон Блог{% endblock %}
+    {% block head %}{% endblock %}
     </title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-  </head>
-  <body>
-    <header>
-      {% block nav %} {% include "includes/nav.html" %} {% endblock %}
-    </header>
-    <main>
-      <div class="container-xl">{% block content %} {% endblock %}</div>
-    </main>
-    <footer>
-      {% block footer %}
-      <div class="container-xl">
-        <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
-      </div>
-      {% endblock %}
-    </footer>
+</head>
+<body>
+<header>
+    {% block nav %} {% include "includes/nav.html" %} {% endblock %}
+</header>
+<main>
+    <div class="container-xl">{% block content %} {% endblock %}</div>
+</main>
+<footer>
+    {% block footer %}
+    <div class="container-xl">
+    <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
+    </div>
+    {% endblock %}
+</footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    {% block scripts %}{% endblock %}
-  </body>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+></script>
+{% block scripts %}{% endblock %}
+</body>
 </html>
