--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -1,1 +1,13 @@
 {% extends "base.html" %}
+{% comment %} {% block nav %} {% endblock %} {% endcomment %}
+{% block title %}Главная страница {% endblock %}
+{% block content %} 
+<h1>Добро пожаловать на главную страницу блога!</h1>
+<p>Здесь вы найдете много интересного и полезного!</p>
+{% endblock %}
+{% comment %} {% block footer %}
+<p> Новый футер </p>
+{{ block.super}}
+{% endblock %} {% endcomment %}
+
+
