--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -7,6 +7,9 @@
 <title>
     {% block title %}Пайтон Блог{% endblock %}
     {% block head %}{% endblock %}
+    {% comment %} <style>
+        {% block style %} {% endblock%}
+    </style> {% endcomment %}
     </title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
