--- a/myproject/templates/includes/nav.html
+++ b/myproject/templates/includes/nav.html
@@ -13,10 +13,10 @@ page_alias - переменная, которая содержит алиас т
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-link" href="#">Цена</a>
-          {% comment %} {% for item in menu %}
-            <a class="nav-link {% if item.alias == page_alias %} active {% endif %}" href="{% url item.alias %}">{{ item.name }}</a> {% endcomment %}
-          {% comment %} {% endfor %} {% endcomment %}
+            {% comment %} <a class="nav-link" href="#">Цена</a> {% endcomment %}
+          {% for item in menu %}
+            <a class="nav-link {% if item.alias == page_alias %} active {% endif %}" href="{% url item.alias %}">{{ item.name }}</a>
+          {% endfor %}
         </div>
       </div>
     </div>
