переключение nav без ошибок

--- a/myproject/python_blog/templates/python_blog/about.html
+++ b/myproject/python_blog/templates/python_blog/about.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% block title %}О нас {% endblock %} {% block content
-%}
-<h1>Добро пожаловать на страницу О нас</h1>
-<p>Здесь ничего нет, но что-то будет!</p>
+{% extends "base.html" %}
+{% block title %} О нас {% endblock %}
+{% block content%}
+  <h1>Добро пожаловать на страницу "О нас"</h1>
+  <p>Здесь ничего нет, но что-то будет!</p>
 {% endblock %}
