--- a/myproject/python_blog/templates/python_blog/blog.html
+++ b/myproject/python_blog/templates/python_blog/blog.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} {% block title %}Блог {% endblock %} {% block content
-%}
-<h1>Это Блог!</h1>
-<p>Здесь много интересного!</p>
+{% extends "base.html" %}
+{% block title %} Блог {% endblock %}
+{% block content %}
+    <h1>Это Блог!</h1>
+    <p>Здесь много интересного!</p>
 {% endblock %}
