--- a/myproject/python_blog/templates/python_blog/about.html
+++ b/myproject/python_blog/templates/python_blog/about.html
@@ -3,4 +3,5 @@
 {% block content%}
   <h1>Добро пожаловать на страницу "О нас"</h1>
   <p>Здесь ничего нет, но что-то будет!</p>
+  <p>Пользователей <i class="bi bi-clipboard-check danger"></i>{{ users_count }} </p>
 {% endblock %}
