--- a/myproject/python_blog/templates/includes/post_preview.html
+++ b/myproject/python_blog/templates/includes/post_preview.html
@@ -1,14 +1,22 @@
-<div>
-  <div class="card mb-3">
-    <div class="card-header">
-      <h5>{{ category }}</h5>
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">{{ title }}</h5>
-      <p class="card-text">{{ text }}</p>
-      <p class="card-text">
-        <small class="text-muted">{{ author }} | {{ published_date }}</small>
-      </p>
+{% comment %} {% load markdown_to_html %} {% endcomment %}
+<div class="card h-100 mt-3 mb-3">
+  <div class="card-body">
+    {% comment %} <h5 class="card-title">{% markdown_to_html post.title %}</h5>
+    <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p> {% endcomment %}
+    <p class="card-text">{{ post.text }}</p>
+    <div class="d-flex justify-content-between align-items-center">
+      <div>
+        <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
+        <span><i class="bi bi-calendar"></i> {{ post.published_date }}</span>
+      </div>
+      {% comment %} <div>
+        <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-block d-md-none">
+            <i class="bi bi-arrow-right"></i>
+        </a>
+        <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-none d-md-block">
+            Читать далее
+        </a>
+      </div> {% endcomment %}
     </div>
   </div>
 </div>
