--- a/myproject/python_blog/templates/includes/post_preview.html
+++ b/myproject/python_blog/templates/includes/post_preview.html
@@ -3,20 +3,20 @@
   <div class="card-body">
     {% comment %} <h5 class="card-title">{% markdown_to_html post.title %}</h5>
     <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p> {% endcomment %}
-    <p class="card-text">{{ post.text }}</p>
+    <p class="card-text">{{ post.text|truncatewords:20 }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
         <span><i class="bi bi-calendar"></i> {{ post.published_date }}</span>
       </div>
-      {% comment %} <div>
+      <div>
         <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-block d-md-none">
             <i class="bi bi-arrow-right"></i>
         </a>
         <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-none d-md-block">
             Читать далее
         </a>
-      </div> {% endcomment %}
+      </div>
     </div>
   </div>
 </div>
