--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
     {% block title %}Пайтон Блог{% endblock %}
     {% block head %}{% endblock %}
     {% comment %} <style>
@@ -17,7 +17,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
 </head>
 <body>
@@ -30,7 +31,8 @@
 <footer>
     {% block footer %}
     <div class="container-xl">
-    <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
+        <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
+        <p class="text-center text-muted">Учебный проект. Академия "Top". Группа P315</p>
     </div>
     {% endblock %}
 </footer>
