--- a/myproject/python_blog/templates/python_blog/blog.html
+++ b/myproject/python_blog/templates/python_blog/blog.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/blog_catalog.css' %}" />
+<link rel="stylesheet" href="{% static 'css/blog.css' %}" />
 {% endblock  %}
 {% block title %}Блог{% endblock %}
 {% block content %}
