--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,17 @@
-body {
-  background-color: aliceblue;
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  background-color: #151617;
+  color: rgb(165, 165, 165);
+  text-align: center;
+  padding: 1rem;
 }
