--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>
     {% block title %}Пайтон Блог{% endblock %}
+    <link rel = "icon" href="{% static "images/favicon.png" %}" type="image/x-icon">
     {% block head %}{% endblock %}
-    {% comment %} <style>
-        {% block style %} {% endblock%}
-    </style> {% endcomment %}
+    <style>
+        {% block style %} {% endblock %}
+    </style>
     </title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
