--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,6 +1,3 @@
-/* Легкий эффект "всплытия" для карточек При наведении мыши. div.card Небольшое увеличение с анимацией
-Увеличение размера на 5% при наведении на карточку. */
-
 div.card:hover {
     transform: scale(1.01);
     transition: transform 1.5s;
@@ -8,28 +5,26 @@ div.card:hover {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-/* Глобальный стиль для всех полей ввода */
 input:focus, textarea:focus, select:focus {
-    outline: none !important; /* Убрать стандартную обводку */
-    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25) !important; /* Серая обводка */
-    border-color: #6c757d !important; /* Серая обводка */
+    outline: none !important; 
+    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25) !important;
+    border-color: #6c757d !important;
 }
 
 
-/* Стили для чекбоксов */
 input[type="checkbox"] {
-    accent-color: #343a40; /* Темный цвет для активного состояния */
-    border: 1px solid #6c757d; /* Серый бордер */
+    accent-color: #343a40;
+    border: 1px solid #6c757d;
 }
 
 input[type="checkbox"]:checked {
-    background-color: #343a40; /* Темный цвет для активного состояния */
-    border-color: #495057; /* Темный бордер */
-    outline: none; /* Убрать голубую обводку */
+    background-color: #343a40;
+    border-color: #495057;
+    outline: none; 
 }
 
 input[type="checkbox"]:focus {
-    outline: none; /* Убрать голубую обводку */
-    box-shadow: none; /* Убрать тень */
-    border-color: #495057; /* Темный бордер для фокуса */
+    outline: none;
+    box-shadow: none;
+    border-color: #495057;
 }
