--- a/myproject/python_blog/templates/includes/post_preview.html
+++ b/myproject/python_blog/templates/includes/post_preview.html
@@ -1,8 +1,8 @@
-{% comment %} {% load markdown_to_html %} {% endcomment %}
+{% load markdown_to_html %}
 <div class="card h-100 mt-3 mb-3">
   <div class="card-body">
-    {% comment %} <h5 class="card-title">{% markdown_to_html post.title %}</h5>
-    <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p> {% endcomment %}
+    <h5 class="card-title">{% markdown_to_html post.title %}</h5>
+    <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p>
     <p class="card-text">{{ post.text|truncatewords:20 }}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div>
