--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -7,7 +7,7 @@
     <title>
     {% block title %}Пайтон Блог{% endblock %}
     <link rel = "icon" href="{% static "images/favicon.png" %}" type="image/x-icon">
-    {% block head %}{% endblock %}
+
     <style>
         {% block style %} {% endblock %}
     </style>
@@ -21,6 +21,9 @@
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/post_detail.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css">
+    {% block head %}{% endblock %}
 </head>
 <body>
 <header>
@@ -43,6 +46,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
 ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
