--- a/myproject/static/css/base.css
+++ b/myproject/static/css/base.css
@@ -11,7 +11,7 @@ main {
 
 footer {
   background-color: #151617;
-  color: rgb(165, 165, 165);
+  color: white;
   text-align: center;
   padding: 1rem;
 }
