--- a/myproject/python_blog/templates/includes/post_preview.html
+++ b/myproject/python_blog/templates/includes/post_preview.html
@@ -17,5 +17,14 @@
         </a>
       </div>
     </div>
+    <div>
+      {% if post.tags.all %}
+        <div class="tags">
+          {% for tag in post.tags.all %}
+             <span class="tag badge">{{ tag }}</span>
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
   </div>
 </div>
