--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -1,53 +1,59 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-    {% block title %}Пайтон Блог{% endblock %}
-    <link rel = "icon" href="{% static "images/favicon.png" %}" type="image/x-icon">
-
-    <style>
-        {% block style %} {% endblock %}
-    </style>
-    </title>
+    <title>{% block title %}Пайтон Блог{% endblock %}</title>
+    <link rel = "icon" href="{% static "images/favicon.png" %}"
+    type="image/x-icon">
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
-    <link rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css"
+    />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/post_detail.css' %}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css">
-    {% block head %}{% endblock %}
-</head>
-<body>
-<header>
-    {% block nav %} {% include "includes/nav.html" %} {% endblock %}
-</header>
-<main>
-    <div class="container-xl">{% block content %} {% endblock %}</div>
-</main>
-<footer>
-    {% block footer %}
-    <div class="container-xl">
-        <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
-        <p class="text-center text-muted">Учебный проект. Академия "Top". Группа P315</p>
-    </div>
-    {% endblock %}
-</footer>
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
 
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-></script>
+    {% block head %}{% endblock %}
+  </head>
+  <body>
+    <header>
+      {% block nav %} {% include "includes/nav.html" %} {% endblock %}
+    </header>
+    <main>
+      <div class="container-xl">{% block content %} {% endblock %}</div>
+    </main>
+    <footer>
+      {% block footer %}
+      <div class="container-xl">
+        <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
+        <p class="text-center text-muted">
+          Учебный проект. Академия "Top". Группа P315
+        </p>
+      </div>
+      {% endblock %}
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
-{% block scripts %}{% endblock %}
-</body>
+    <script>
+      hljs.highlightAll();
+    </script>
+    <script src="{% static 'js/add_img_class.js' %}"></script>
+    {% block scripts %}{% endblock %}
+  </body>
 </html>
