--- a/myproject/python_blog/templates/includes/post_preview.html
+++ b/myproject/python_blog/templates/includes/post_preview.html
@@ -21,7 +21,7 @@
       {% if post.tags.all %}
         <div class="tags">
           {% for tag in post.tags.all %}
-             <span class="tag badge">{{ tag }}</span>
+          <a href="{% url 'tag_detail' tag.slug %}" class="btn btn-dark">"{{ tag }}"</a>
           {% endfor %}
         </div>
       {% endif %}
