footer убрал затемнение

--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -36,8 +36,8 @@
     <footer>
       {% block footer %}
       <div class="container-xl">
-        <p class="text-center text-muted">&copy; 2024 Пайтон Блог</p>
-        <p class="text-center text-muted">
+        <p class="text-center">&copy; 2024 Пайтон Блог</p>
+        <p class="text-center">
           Учебный проект. Академия "Top". Группа P315
         </p>
       </div>
